# Sparkle

./: .gitignore  .ocamlformat  dune-project  out.asm  output.txt  prim.asm  readme.md
lib/: LR_errors.messages  LR_errors.ml  common.ml  compile.ml  concrete.ml  dune  error_message.messages  error_messages.ml  ir.ml  ir_cnv.ml  ir_lisp.ml  lex.mll  lexer.mll  lexical.ml  llvm_ir.ml  machine.ml  parse.ml  parser.mly  prim.ml  semantics.ml  stack_ir.ml  syntactics.ml  texts.ml  typing.ml  word32.ml
lib/predefined/: all.asm  stdlib.s
lib/predifined/: print.asm
lib/test/: 19cish_01fact.cish  guessnum.cish  print_19cish_03fibo.cish
mmips/: ast.ml  dune  mips.ml  mmips.ml  prim.ml
mmips/predifined/: print.asm
mmips/test/: 10fun_07recur.cish  11let_01shadow.cish  19cish_03fibo.cish  print_01cexpr_01add.cish
testcases/: add2.sp  err_branch.sp  err_chained.sp  err_decl_impl.sp  err_name_crash.sp  err_syntax.sp  extern_var.sp  fbnc.sp  fbnc2.sp  list.sp  list_simpl.sp  many_add.sp  prim.spi  print.sp
