(lang dune 3.15)

(using menhir 3.0)

(name mmips)

(source
 (github mizurennanako/spml))

(authors "Cherry Sigma")

(license public domain)

(documentation https://url/to/documentation)

(package
 (name mmips)
 (synopsis "mmips")
 (description "generate mips instruction from c-ish input")
 (depends ocaml dune))
